<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".NaughtyDetailActivity">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/idNaughtyLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/idNaughty"
                android:layout_marginLeft="20dp"
                android:textSize="20sp"/>

            <TextView
                android:id="@+id/idNaughty"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="140dp"
                android:layout_marginTop="-27dp"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/firstNameLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/firstName"
                android:layout_marginLeft="20dp"
                android:textSize="20sp"/>

            <TextView
                android:id="@+id/firstName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="140dp"
                android:layout_marginTop="-27dp"
                android:textSize="20sp"/>

            <TextView
                android:id="@+id/lastNameLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lastName"
                android:layout_marginLeft="20dp"
                android:textSize="20sp"/>

            <TextView
                android:id="@+id/lastName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="140dp"
                android:layout_marginTop="-27dp"
                android:textSize="20sp"/>

            <TextView
                android:id="@+id/birthdayLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/birthday_noformat"
                android:layout_marginLeft="20dp"
                android:textSize="20sp"/>

            <TextView
                android:id="@+id/birthday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="140dp"
                android:layout_marginTop="-27dp"
                android:textSize="20sp"/>

            <TextView
                android:id="@+id/streetLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/street"
                android:layout_marginLeft="20dp"
                android:textSize="20sp"/>

            <TextView
                android:id="@+id/street"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="140dp"
                android:layout_marginTop="-27dp"
                android:textSize="20sp"/>


            <TextView
                android:id="@+id/cityLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/city"
                android:layout_marginLeft="20dp"
                android:textSize="20sp"/>

            <TextView
                android:id="@+id/cityName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="140dp"
                android:layout_marginTop="-27dp"
                android:textSize="20sp"/>


            <TextView
                android:id="@+id/provinceLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/province"
                android:layout_marginLeft="20dp"
                android:textSize="20sp"/>

            <TextView
                android:id="@+id/province"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="140dp"
                android:layout_marginTop="-27dp"
                android:textSize="20sp"/>


            <TextView
                android:id="@+id/postalCodeLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/postalCode"
                android:layout_marginLeft="20dp"
                android:textSize="20sp"/>

            <TextView
                android:id="@+id/postalCode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="140dp"
                android:layout_marginTop="-27dp"
                android:textSize="20sp"/>


            <TextView
                android:id="@+id/countryLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/country"
                android:layout_marginLeft="20dp"
                android:textSize="20sp"/>

            <TextView
                android:id="@+id/country"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="140dp"
                android:layout_marginTop="-27dp"
                android:textSize="20sp"/>


            <TextView
                android:id="@+id/latitudeLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/latitude"
                android:layout_marginLeft="20dp"
                android:textSize="20sp"/>

            <TextView
                android:id="@+id/latitude"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="140dp"
                android:layout_marginTop="-27dp"
                android:textSize="20sp"/>


            <TextView
                android:id="@+id/longitudeLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/longitude"
                android:layout_marginLeft="20dp"
                android:textSize="20sp"/>

            <TextView
                android:id="@+id/longitude"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="140dp"
                android:layout_marginTop="-27dp"
                android:textSize="20sp"/>


            <TextView
                android:id="@+id/isNaughtyLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/isNaughty"
                android:layout_marginLeft="20dp"
                android:textSize="20sp"/>

            <TextView
                android:id="@+id/isNaughty"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="140dp"
                android:layout_marginTop="-27dp"
                android:textSize="20sp"/>


            <TextView
                android:id="@+id/dateCreatedLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dateCreated"
                android:layout_marginLeft="20dp"
                android:textSize="20sp"/>

            <TextView
                android:id="@+id/dateCreated"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="140dp"
                android:layout_marginTop="-27dp"
                android:textSize="20sp"/>
            <Button
                android:id="@+id/deleteButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/delete"
                android:onClick="deleteInfo"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                tools:layout_editor_absoluteY="200dp" />

            <Button
                android:id="@+id/editButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/edit"
                android:onClick="editInfo"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                tools:layout_editor_absoluteY="200dp" />

        </LinearLayout>
    </ScrollView>
</LinearLayout>